--- a/JSTypeTester/JSTypeTester.csproj
+++ b/JSTypeTester/JSTypeTester.csproj
@@ -63,6 +63,12 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <Compile Include="SpeedPicker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SpeedPicker.Designer.cs">
+      <DependentUpon>SpeedPicker.cs</DependentUpon>
+    </Compile>
     <Compile Include="TypeTester.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +100,9 @@
     </Compile>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SpeedPicker.resx">
+      <DependentUpon>SpeedPicker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TypeTester.resx">
       <DependentUpon>TypeTester.cs</DependentUpon>
